--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.1.5",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.59.16",
+    "ky": "^1.7.2",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
