--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "stylelint": "stylelint '**/*.scss' '**/*.css'",
+    "stylelint:fix": "stylelint '**/*.scss' '**/*.css' --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -39,6 +41,10 @@
     "globals": "^15.11.0",
     "msw": "^2.5.1",
     "sass": "^1.80.4",
+    "stylelint": "^16.10.0",
+    "stylelint-config-sass-guidelines": "^12.1.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-scss": "^6.8.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
