--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "eslint": "eslint",
+    "eslint:fix": "eslint --fix",
     "stylelint": "stylelint '**/*.scss' '**/*.css'",
     "stylelint:fix": "stylelint '**/*.scss' '**/*.css' --fix"
   },
@@ -30,16 +32,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
     "@types/leaflet": "^1.9.14",
     "@types/node": "^22.8.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "msw": "^2.5.1",
+    "prettier": "^3.3.3",
     "sass": "^1.80.4",
     "stylelint": "^16.10.0",
     "stylelint-config-sass-guidelines": "^12.1.0",
