--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,15 +23,9 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@shared/*": [
-        "src/shared/*"
-      ],
-      "@states/*": [
-        "src/shared/states/*"
-      ],
+      "@/*": ["src/*"],
+      "@shared/*": ["src/shared/*"],
+      "@states/*": ["src/shared/states/*"]
     }
   },
   "include": ["src"]
