--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "npm run eslint && npm run stylelint",
     "preview": "vite preview",
     "eslint": "eslint",
-    "eslint:fix": "eslint --fix",
     "stylelint": "stylelint '**/*.scss' '**/*.css'",
-    "stylelint:fix": "stylelint '**/*.scss' '**/*.css' --fix"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -38,13 +37,20 @@
     "@types/node": "^22.8.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "jsonc-eslint-parser": "^2.4.0",
+    "lint-staged": "^15.2.10",
     "msw": "^2.5.1",
     "prettier": "^3.3.3",
     "sass": "^1.80.4",
@@ -59,6 +65,15 @@
   "msw": {
     "workerDirectory": [
       "public"
+    ]
+  },
+  "lint-staged": {
+    "**/*.{js,ts,jsx,tsx}": [
+      "npx eslint --fix",
+      "npx prettier --write --ignore-unknown"
+    ],
+    "**/*.{css,scss}": [
+      "npx stylelint --fix"
     ]
   }
 }
