--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "test": "vitest",
     "lint": "npm run eslint && npm run stylelint",
     "preview": "vite preview",
     "eslint": "eslint",
@@ -49,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
     "jsonc-eslint-parser": "^2.4.0",
     "lint-staged": "^15.2.10",
     "msw": "^2.5.1",
@@ -60,7 +62,8 @@
     "stylelint-scss": "^6.8.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vitest": "^2.1.3"
   },
   "msw": {
     "workerDirectory": [
