--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,8 +25,9 @@
     "paths": {
       "@/*": ["src/*"],
       "@shared/*": ["src/shared/*"],
-      "@states/*": ["src/shared/states/*"]
+      "@states/*": ["src/shared/states/*"],
+      "@tests/*": ["src/shared/utils/tests/*"]
     }
   },
-  "include": ["src"]
+  "exclude": ["node_modules", "tmp"]
 }
