feat: add test for has feature utility

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,5 +29,5 @@
       "@tests/*": ["src/shared/utils/tests/*"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "include": ["src", "__tests__"],
 }
