--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,8 +25,19 @@
     "paths": {
       "@/*": ["src/*"],
       "@shared/*": ["src/shared/*"],
-      "@states/*": ["src/shared/states/*"]
+      "@states/*": ["src/shared/states/*"],
+      "@tests/*": ["src/shared/utils/tests/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "__tests__", "**/*.d.ts"],
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.tsx",
+    "src/**/*.test.js",
+    "src/**/*.spec.js",
+    "src/**/*.test.jsx",
+    "src/**/*.spec.jsx",
+  ]
 }
