--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,5 +29,15 @@
       "@tests/*": ["src/shared/utils/tests/*"]
     }
   },
-  "include": ["src", "__tests__"],
+  "include": ["src", "__tests__", "**/*.d.ts"],
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.tsx",
+    "src/**/*.test.js",
+    "src/**/*.spec.js",
+    "src/**/*.test.jsx",
+    "src/**/*.spec.jsx",
+  ]
 }
