--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ mockServiceWorker.js
 
 # i18next-parser old catalogs
 *_old.json
+.eslintcache
+tsconfig.app.tsbuildinfo
+tsconfig.node.tsbuildinfo
