--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
+    "@turf/area": "^7.1.0",
+    "@turf/helpers": "^7.1.0",
+    "@turf/intersect": "^7.1.0",
+    "@turf/union": "^7.1.0",
     "formik": "^2.4.6",
     "ky": "^1.7.2",
     "leaflet": "^1.9.4",
